--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -89,7 +89,7 @@ QPushButton {
      <enum>QFrame::Plain</enum>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>2</number>
     </property>
     <widget class="LandingPage" name="landingPage">
      <property name="minimumSize">
@@ -4196,7 +4196,7 @@ background-color: #A0ACB0;</string>
           <widget class="QComboBox" name="ledStripComboBox">
            <property name="geometry">
             <rect>
-             <x>70</x>
+             <x>60</x>
              <y>120</y>
              <width>100</width>
              <height>30</height>
@@ -4229,54 +4229,6 @@ QComboBox::down-arrow {
 </string>
            </property>
           </widget>
-          <widget class="QSpinBox" name="ledStripSpeedSpinBox">
-           <property name="geometry">
-            <rect>
-             <x>70</x>
-             <y>200</y>
-             <width>100</width>
-             <height>30</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QSpinBox {
-    background-color: #F9F8F8; /* Fond gris clair */
-    color: #000000; /* Texte noir */
-    font-size: 12px; /* Taille de la police 12 */
-    border: 1px solid #707070; /* Bordure de 1px en noir */
-    border-radius: 3px; /* Coins arrondis de 3px */
-    padding: 2px; /* Espacement interne */
-    selection-background-color: transparent;
-}
-
-QSpinBox::up-button, QSpinBox::down-button {
-    background-color: #F79643; /* Couleur de fond des boutons d'incrémentation/décrémentation */
-    width: 20px; /* Largeur des boutons */
-    border: 0px solid #707070; /* Bordure des boutons en noir */
-	margin: 0px; /* Marge des boutons */
-}
-
-QSpinBox::up-button {
-    subcontrol-origin: padding;
-    subcontrol-position: top right;
-}
-
-QSpinBox::down-button {
-    subcontrol-origin: padding;
-    subcontrol-position: bottom right;
-}
-
-QSpinBox::up-arrow{
-    image: url(./ressources/generic/arrow_up.svg); /* Chemin relatif vers votre icône SVG */
-    color: #000000; /* Couleur des flèches en noir */
-}
-QSpinBox::down-arrow {
-    image: url(./ressources/generic/arrow_down.svg); /* Chemin relatif vers votre icône SVG */
-    color: #000000; /* Couleur des flèches en noir */
-}
-</string>
-           </property>
-          </widget>
           <widget class="QPushButton" name="ledStripColorButton">
            <property name="geometry">
             <rect>
@@ -4304,7 +4256,7 @@ QPushButton:pressed {
           <widget class="QLabel" name="label_3">
            <property name="geometry">
             <rect>
-             <x>80</x>
+             <x>60</x>
              <y>100</y>
              <width>61</width>
              <height>16</height>
@@ -4318,13 +4270,13 @@ color: black;</string>
             <string>Mode</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
            </property>
           </widget>
           <widget class="QLabel" name="label_11">
            <property name="geometry">
             <rect>
-             <x>80</x>
+             <x>60</x>
              <y>180</y>
              <width>71</width>
              <height>16</height>
@@ -4338,7 +4290,7 @@ color: black;</string>
             <string>Vitesse</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
            </property>
           </widget>
           <widget class="QLabel" name="label_12">
@@ -4383,58 +4335,10 @@ background-color: #A0ACB0;</string>
             <set>Qt::AlignCenter</set>
            </property>
           </widget>
-          <widget class="QSpinBox" name="ledStripBrightnessSpinBox">
-           <property name="geometry">
-            <rect>
-             <x>70</x>
-             <y>280</y>
-             <width>100</width>
-             <height>30</height>
-            </rect>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QSpinBox {
-    background-color: #F9F8F8; /* Fond gris clair */
-    color: #000000; /* Texte noir */
-    font-size: 12px; /* Taille de la police 12 */
-    border: 1px solid #707070; /* Bordure de 1px en noir */
-    border-radius: 3px; /* Coins arrondis de 3px */
-    padding: 2px; /* Espacement interne */
-    selection-background-color: transparent;
-}
-
-QSpinBox::up-button, QSpinBox::down-button {
-    background-color: #F79643; /* Couleur de fond des boutons d'incrémentation/décrémentation */
-    width: 20px; /* Largeur des boutons */
-    border: 0px solid #707070; /* Bordure des boutons en noir */
-	margin: 0px; /* Marge des boutons */
-}
-
-QSpinBox::up-button {
-    subcontrol-origin: padding;
-    subcontrol-position: top right;
-}
-
-QSpinBox::down-button {
-    subcontrol-origin: padding;
-    subcontrol-position: bottom right;
-}
-
-QSpinBox::up-arrow{
-    image: url(./ressources/generic/arrow_up.svg); /* Chemin relatif vers votre icône SVG */
-    color: #000000; /* Couleur des flèches en noir */
-}
-QSpinBox::down-arrow {
-    image: url(./ressources/generic/arrow_down.svg); /* Chemin relatif vers votre icône SVG */
-    color: #000000; /* Couleur des flèches en noir */
-}
-</string>
-           </property>
-          </widget>
           <widget class="QLabel" name="label_20">
            <property name="geometry">
             <rect>
-             <x>90</x>
+             <x>60</x>
              <y>260</y>
              <width>71</width>
              <height>16</height>
@@ -4448,7 +4352,78 @@ color: black;</string>
             <string>Luminosité</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+           </property>
+          </widget>
+          <widget class="QDial" name="ledBrightnessDial">
+           <property name="geometry">
+            <rect>
+             <x>140</x>
+             <y>270</y>
+             <width>51</width>
+             <height>61</height>
+            </rect>
+           </property>
+           <property name="maximum">
+            <number>255</number>
+           </property>
+          </widget>
+          <widget class="QDial" name="ledSpeedDial">
+           <property name="geometry">
+            <rect>
+             <x>140</x>
+             <y>190</y>
+             <width>51</width>
+             <height>61</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QLabel" name="ledSpeed">
+           <property name="geometry">
+            <rect>
+             <x>60</x>
+             <y>210</y>
+             <width>61</width>
+             <height>31</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QLabel {
+    background-color: #F9F8F8; /* Fond gris clair */
+    color: #000000; /* Texte noir */
+    font-size: 12px; /* Taille de la police 12 */
+    border: 1px solid #707070; /* Bordure de 1px en noir */
+    border-radius: 3px; /* Coins arrondis de 3px */
+    padding: 2px; /* Espacement interne */
+}
+</string>
+           </property>
+           <property name="text">
+            <string>0</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="ledBrightness">
+           <property name="geometry">
+            <rect>
+             <x>60</x>
+             <y>290</y>
+             <width>61</width>
+             <height>31</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QLabel {
+    background-color: #F9F8F8; /* Fond gris clair */
+    color: #000000; /* Texte noir */
+    font-size: 12px; /* Taille de la police 12 */
+    border: 1px solid #707070; /* Bordure de 1px en noir */
+    border-radius: 3px; /* Coins arrondis de 3px */
+    padding: 2px; /* Espacement interne */
+}
+</string>
+           </property>
+           <property name="text">
+            <string>0</string>
            </property>
           </widget>
          </widget>
