--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -89,7 +89,7 @@ QPushButton {
      <enum>QFrame::Plain</enum>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>4</number>
     </property>
     <widget class="LandingPage" name="landingPage">
      <property name="minimumSize">
@@ -6304,7 +6304,7 @@ QProgressBar::chunk {
        <widget class="QLabel" name="logo2_6">
         <property name="geometry">
          <rect>
-          <x>700</x>
+          <x>650</x>
           <y>390</y>
           <width>51</width>
           <height>61</height>
@@ -6324,9 +6324,9 @@ QProgressBar::chunk {
         <property name="geometry">
          <rect>
           <x>60</x>
-          <y>460</y>
-          <width>671</width>
-          <height>25</height>
+          <y>454</y>
+          <width>621</width>
+          <height>31</height>
          </rect>
         </property>
         <property name="orientation">
@@ -6348,8 +6348,8 @@ QProgressBar::chunk {
            <widget class="QLabel" name="stepdetail">
             <property name="geometry">
              <rect>
-              <x>90</x>
-              <y>80</y>
+              <x>50</x>
+              <y>70</y>
               <width>181</width>
               <height>20</height>
              </rect>
@@ -6374,7 +6374,7 @@ color: black;</string>
            <widget class="QLabel" name="stepTitle">
             <property name="geometry">
              <rect>
-              <x>40</x>
+              <x>80</x>
               <y>10</y>
               <width>361</width>
               <height>41</height>
@@ -6400,7 +6400,7 @@ color: black;</string>
            <widget class="QPushButton" name="stepButton">
             <property name="geometry">
              <rect>
-              <x>290</x>
+              <x>250</x>
               <y>70</y>
               <width>61</width>
               <height>31</height>
@@ -6426,6 +6426,32 @@ QPushButton:pressed {
           </widget>
          </item>
         </layout>
+       </widget>
+       <widget class="QPushButton" name="interrupt">
+        <property name="geometry">
+         <rect>
+          <x>720</x>
+          <y>440</y>
+          <width>61</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton {
+    color: white;
+    font-size: 16px;
+    background-color: #F79643;
+    border-radius: 5px;
+}
+
+QPushButton:pressed {
+    background-color: #f0f0f0; /* Gris clair lorsqu'appuyé */
+}
+</string>
+        </property>
+        <property name="text">
+         <string>Stop !</string>
+        </property>
        </widget>
       </widget>
       <widget class="QWidget" name="endingPage">
