--- a/RaspberryPi/GUI/cocktailStep1Button.ui
+++ b/RaspberryPi/GUI/cocktailStep1Button.ui
@@ -10,6 +10,24 @@
     <height>120</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>120</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>400</width>
+    <height>120</height>
+   </size>
+  </property>
   <widget class="QLabel" name="subtitle">
    <property name="geometry">
     <rect>
