--- a/RaspberryPi/GUI/form.ui
+++ b/RaspberryPi/GUI/form.ui
@@ -6170,7 +6170,7 @@ background-color: transparent;</string>
        <enum>QFrame::Plain</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="ProcessPage" name="processPage">
        <property name="minimumSize">
@@ -6333,18 +6333,62 @@ QProgressBar::chunk {
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
-       <widget class="QWidget" name="verticalLayoutWidget_2">
+       <widget class="QPushButton" name="interrupt">
         <property name="geometry">
          <rect>
-          <x>120</x>
-          <y>260</y>
-          <width>551</width>
-          <height>121</height>
+          <x>720</x>
+          <y>440</y>
+          <width>61</width>
+          <height>31</height>
          </rect>
         </property>
-        <layout class="QVBoxLayout" name="CocktailStepVerticalLayout">
+        <property name="styleSheet">
+         <string notr="true">QPushButton {
+    color: white;
+    font-size: 16px;
+    background-color: #F79643;
+    border-radius: 5px;
+}
+
+QPushButton:pressed {
+    background-color: #f0f0f0; /* Gris clair lorsqu'appuyé */
+}
+</string>
+        </property>
+        <property name="text">
+         <string>Stop !</string>
+        </property>
+       </widget>
+       <widget class="QWidget" name="horizontalLayoutWidget">
+        <property name="geometry">
+         <rect>
+          <x>50</x>
+          <y>260</y>
+          <width>671</width>
+          <height>122</height>
+         </rect>
+        </property>
+        <layout class="QHBoxLayout" name="CocktailStepVerticalLayout">
          <item>
           <widget class="QWidget" name="cocktailStep" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>500</width>
+             <height>120</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>200</width>
+             <height>120</height>
+            </size>
+           </property>
            <widget class="QLabel" name="stepdetail">
             <property name="geometry">
              <rect>
@@ -6374,9 +6418,9 @@ color: black;</string>
            <widget class="QLabel" name="stepTitle">
             <property name="geometry">
              <rect>
-              <x>80</x>
+              <x>0</x>
               <y>10</y>
-              <width>361</width>
+              <width>501</width>
               <height>41</height>
              </rect>
             </property>
@@ -6426,32 +6470,6 @@ QPushButton:pressed {
           </widget>
          </item>
         </layout>
-       </widget>
-       <widget class="QPushButton" name="interrupt">
-        <property name="geometry">
-         <rect>
-          <x>720</x>
-          <y>440</y>
-          <width>61</width>
-          <height>31</height>
-         </rect>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    color: white;
-    font-size: 16px;
-    background-color: #F79643;
-    border-radius: 5px;
-}
-
-QPushButton:pressed {
-    background-color: #f0f0f0; /* Gris clair lorsqu'appuyé */
-}
-</string>
-        </property>
-        <property name="text">
-         <string>Stop !</string>
-        </property>
        </widget>
       </widget>
       <widget class="QWidget" name="endingPage">
