--- a/RaspberryPi/GUI/cocktailStep.ui
+++ b/RaspberryPi/GUI/cocktailStep.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>120</height>
+    <width>800</width>
+    <height>200</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,23 +18,23 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
-    <height>120</height>
+    <width>800</width>
+    <height>200</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
-    <height>120</height>
+    <width>800</width>
+    <height>200</height>
    </size>
   </property>
   <widget class="QLabel" name="subtitle">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>200</x>
      <y>40</y>
      <width>400</width>
-     <height>30</height>
+     <height>100</height>
     </rect>
    </property>
    <property name="font">
@@ -51,7 +51,10 @@ color: black;</string>
     <string>Déposez un verre sur la machine</string>
    </property>
    <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <set>Qt::AlignHCenter|Qt::AlignTop</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="stepTitle">
@@ -59,7 +62,7 @@ color: black;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>801</width>
      <height>40</height>
     </rect>
    </property>
